force-app/main/default/objects/MD_Opportunity__c/MD_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Business Opportunity</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>