force-app/main/default/objects/MD_Opportunity__c/fields/Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceptance</label>
    <type>Checkbox</type>
</CustomField>