force-app/main/default/objects/MD_Opportunity__c/fields/Approval_Status_File_Note__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_File_Note__c</fullName>
    <label>Approval Status (File Note)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>