force-app/main/default/objects/MD_Opportunity__c/fields/Available_in_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available in Stock</label>
    <type>Checkbox</type>
</CustomField>