force-app/main/default/objects/MD_Opportunity__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <label>Budget Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>