force-app/main/default/objects/MD_Opportunity__c/fields/Budgetary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Quote__c</fullName>
    <label>Budgetary Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>