force-app/main/default/objects/MD_Opportunity__c/fields/BudgetedNonBudgeted__c.field-meta.xml
<CustomField>
    <fullName>BudgetedNonBudgeted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budgeted</label>
    <type>Checkbox</type>
</CustomField>