force-app/main/default/objects/MD_Opportunity__c/fields/Business_Case_Approved__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Case Approved</label>
    <type>Checkbox</type>
</CustomField>