force-app/main/default/objects/MD_Opportunity__c/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One_Time_Sales</fullName>
                <label>One Time Sales</label>
            </value>
            <value>
                <fullName>Rental_Reagent</fullName>
                <label>Rental Reagent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>