force-app/main/default/objects/MD_Opportunity__c/fields/Close_Won_Or_Close_Lost__c.field-meta.xml
<CustomField>
    <fullName>Close_Won_Or_Close_Lost__c</fullName>
    <label>Close Won Or Close Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close Won</fullName>
            </value>
            <value>
                <fullName>Close Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>