force-app/main/default/objects/MD_Opportunity__c/fields/Competitor_Equipment_Present__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Equipment_Present__c</fullName>
    <label>Competitor Equipment Present</label>
    <length>255</length>
    <type>Text</type>
</CustomField>