force-app/main/default/objects/MD_Opportunity__c/fields/Contact_ID_formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_formula__c</fullName>
    <formula>Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>