force-app/main/default/objects/MD_Opportunity__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>4 Year</fullName>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>6 Year</fullName>
            </value>
            <value>
                <fullName>7 Year</fullName>
            </value>
            <value>
                <fullName>8 Year</fullName>
            </value>
            <value>
                <fullName>9 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>