force-app/main/default/objects/MD_Opportunity__c/fields/Create_File_Note_For_Paid_Stock__c.field-meta.xml
<CustomField>
    <fullName>Create_File_Note_For_Paid_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create File Note For Paid Stock</label>
    <type>Checkbox</type>
</CustomField>