force-app/main/default/objects/MD_Opportunity__c/fields/Current_Monthly_Business__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Business__c</fullName>
    <label>Current Monthly Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>