force-app/main/default/objects/MD_Opportunity__c/fields/Demo_Performance__c.field-meta.xml
<CustomField>
    <fullName>Demo_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Performance</label>
    <type>Checkbox</type>
</CustomField>