force-app/main/default/objects/MD_Opportunity__c/fields/Demo_Request__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Request</label>
    <type>Checkbox</type>
</CustomField>