force-app/main/default/objects/MD_Opportunity__c/fields/Existing_Equipment_Present__c.field-meta.xml
<CustomField>
    <fullName>Existing_Equipment_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Equipment Present</label>
    <type>Checkbox</type>
</CustomField>