force-app/main/default/objects/MD_Opportunity__c/fields/Expected_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Amount__c</fullName>
    <label>Expected Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>