force-app/main/default/objects/MD_Opportunity__c/fields/File_Note_Approved__c.field-meta.xml
<CustomField>
    <fullName>File_Note_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Form Approved</label>
    <type>Checkbox</type>
</CustomField>