force-app/main/default/objects/MD_Opportunity__c/fields/FOC_Available__c.field-meta.xml
<CustomField>
    <fullName>FOC_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC Sample Available</label>
    <type>Checkbox</type>
</CustomField>