force-app/main/default/objects/MD_Opportunity__c/fields/Instrument_Make__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Make__c</fullName>
    <label>Instrument Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>