force-app/main/default/objects/MD_Opportunity__c/fields/Instrument_Model__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Model__c</fullName>
    <label>Instrument Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>