force-app/main/default/objects/MD_Opportunity__c/fields/Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Name__c</fullName>
    <label>Instrument Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>