force-app/main/default/objects/MD_Opportunity__c/fields/Is_Tender_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Is_Tender_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tender Awarded?</label>
    <type>Checkbox</type>
</CustomField>