force-app/main/default/objects/MD_Opportunity__c/fields/Lab_Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Lab_Certification_Status__c</fullName>
    <label>Lab Certification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>