force-app/main/default/objects/MD_Opportunity__c/fields/Machine_Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Configuration_Type__c</fullName>
    <label>Machine Configuration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>