force-app/main/default/objects/MD_Opportunity__c/fields/Machine_Installed__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Machine Installed</label>
    <type>Checkbox</type>
</CustomField>