force-app/main/default/objects/MD_Opportunity__c/fields/Monthly_Expected_Business__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expected_Business__c</fullName>
    <label>Monthly Expected Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>