force-app/main/default/objects/MD_Opportunity__c/fields/Monthly_Volume_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume_Forecast__c</fullName>
    <label>Monthly Volume Forecast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>