force-app/main/default/objects/MD_Opportunity__c/fields/Opportunity_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Loss_Reason__c</fullName>
    <label>Opportunity Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Close_Won_Or_Close_Lost__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing too high.</fullName>
            </value>
            <value>
                <fullName>Internal Approval Delay.</fullName>
            </value>
            <value>
                <fullName>Internal Reason: e.g (Delay in Sales order Creation).</fullName>
            </value>
            <value>
                <fullName>Customer Overdue.</fullName>
            </value>
            <value>
                <fullName>Customer Credit Limit Short.</fullName>
            </value>
            <value>
                <fullName>Budgeting.</fullName>
            </value>
            <value>
                <fullName>Demo Validation Failure.</fullName>
            </value>
            <value>
                <fullName>Machine Compatibility.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>