force-app/main/default/objects/MD_Opportunity__c/fields/Opportunity_Type1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type1__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>