force-app/main/default/objects/MD_Opportunity__c/fields/Opporunity_Loss_Source__c.field-meta.xml
<CustomField>
    <fullName>Opporunity_Loss_Source__c</fullName>
    <label>Opporunity Loss Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Martin Dow</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>