force-app/main/default/objects/MD_Opportunity__c/fields/PO_Received__c.field-meta.xml
<CustomField>
    <fullName>PO_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Received</label>
    <type>Checkbox</type>
</CustomField>