force-app/main/default/objects/MD_Opportunity__c/fields/PO_Reference__c.field-meta.xml
<CustomField>
    <fullName>PO_Reference__c</fullName>
    <label>PO Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>