force-app/main/default/objects/MD_Opportunity__c/fields/Presentation__c.field-meta.xml
<CustomField>
    <fullName>Presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presentation</label>
    <type>Checkbox</type>
</CustomField>