force-app/main/default/objects/MD_Opportunity__c/fields/Price_Validation__c.field-meta.xml
<CustomField>
    <fullName>Price_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Validation</label>
    <type>Checkbox</type>
</CustomField>