force-app/main/default/objects/MD_Opportunity__c/fields/Primary_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Primary_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities,</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>