force-app/main/default/objects/MD_Opportunity__c/fields/Procurement_Mode__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Mode__c</fullName>
    <label>Procurement Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Direct Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>