force-app/main/default/objects/MD_Opportunity__c/fields/Quote_Synced__c.field-meta.xml
<CustomField>
    <fullName>Quote_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Synced</label>
    <type>Checkbox</type>
</CustomField>