force-app/main/default/objects/MD_Opportunity__c/fields/Reason_for_Switching__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Switching__c</fullName>
    <label>Reason for Switching</label>
    <length>255</length>
    <type>Text</type>
</CustomField>