force-app/main/default/objects/MD_Opportunity__c/fields/Recurrence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Start_Date__c</fullName>
    <label>Recurrence Start Date</label>
    <type>Date</type>
</CustomField>