force-app/main/default/objects/MD_Opportunity__c/fields/Recurring_Contract_Flag__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Contract_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Contract Flag</label>
    <type>Checkbox</type>
</CustomField>