force-app/main/default/objects/MD_Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seeding</fullName>
            </value>
            <value>
                <fullName>Sample / Demo / Documentation</fullName>
            </value>
            <value>
                <fullName>Documentation / Under Review</fullName>
            </value>
            <value>
                <fullName>Budgetary_Quotation</fullName>
                <label>Budgetary Quotation</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Alignment / Viability</fullName>
            </value>
            <value>
                <fullName>Quote / Proposal</fullName>
            </value>
            <value>
                <fullName>Negotiation / Business Feasibility</fullName>
            </value>
            <value>
                <fullName>Demo / Technical review</fullName>
            </value>
            <value>
                <fullName>Tender Submission</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Close_Opportunity</fullName>
                <label>Close Opportunity</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <isActive>false</isActive>
                <label>Closed Won</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>