force-app/main/default/objects/MD_Opportunity__c/fields/Stage_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Update_Date__c</fullName>
    <label>Stage Update Date</label>
    <type>Date</type>
</CustomField>