force-app/main/default/objects/MD_Opportunity__c/fields/SyncedQuoteId__c.field-meta.xml
<CustomField>
    <fullName>SyncedQuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Synced Client Proposal</label>
    <referenceTo>MD_Quote__c</referenceTo>
    <relationshipLabel>Business Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>