force-app/main/default/objects/MD_Opportunity__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VitalScientific</fullName>
            </value>
            <value>
                <fullName>Boule</fullName>
            </value>
            <value>
                <fullName>YHLO</fullName>
            </value>
            <value>
                <fullName>Dymind</fullName>
            </value>
            <value>
                <fullName>OCD</fullName>
            </value>
            <value>
                <fullName>Erba</fullName>
            </value>
            <value>
                <fullName>Nova</fullName>
            </value>
            <value>
                <fullName>Stago</fullName>
            </value>
            <value>
                <fullName>Zybio</fullName>
            </value>
            <value>
                <fullName>Headway</fullName>
            </value>
            <value>
                <fullName>Merck</fullName>
            </value>
            <value>
                <fullName>Millipore</fullName>
            </value>
            <value>
                <fullName>Sigma Aldrich</fullName>
            </value>
            <value>
                <fullName>Cobetter</fullName>
            </value>
            <value>
                <fullName>Rocker</fullName>
            </value>
            <value>
                <fullName>Kraeber</fullName>
            </value>
            <value>
                <fullName>Biobase</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>