force-app/main/default/objects/MD_Opportunity__c/fields/TotalOpportunityQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalOpportunityQuantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>