force-app/main/default/objects/MD_Opportunity__c/recordTypes/Chemicals.recordType-meta.xml
<RecordType>
    <fullName>Chemicals</fullName>
    <active>true</active>
    <label>Chemicals</label>
</RecordType>