force-app/main/default/objects/MD_Opportunity__c/recordTypes/Diagnostics.recordType-meta.xml
<RecordType>
    <fullName>Diagnostics</fullName>
    <active>true</active>
    <label>Diagnostics</label>
</RecordType>