force-app/main/default/objects/MD_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Amount__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Close_Won_Or_Close_Lost__c</field>
        <operation>equals</operation>
        <value>Close Won</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Close_Opportunity</value>
    </filters>
    <label>All</label>
</ListView>