force-app/main/default/objects/MD_Opportunity__c/listViews/Diagnostics.listView-meta.xml
<ListView>
    <fullName>Diagnostics</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MD_Opportunity__c.Diagnostics</value>
    </filters>
    <label>Diagnostics</label>
</ListView>